--- a/gallery.html
+++ b/gallery.html
@@ -50,75 +50,75 @@
         <div class="gallery">
             <div class="gallery-container">
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587755887860-edeaf70346ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587755887860-edeaf70346ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587614295999-6c1c13675117?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587614295999-6c1c13675117?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587684372778-58a6fe604ce6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587684372778-58a6fe604ce6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587755922380-9151dd764ae1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587755922380-9151dd764ae1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587736613350-3f121830084e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587736613350-3f121830084e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587532760882-f547ad5f134a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587532760882-f547ad5f134a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1554991352-97f0e9a851db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1554991352-97f0e9a851db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587678711204-ca6d3d2f1f3b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587678711204-ca6d3d2f1f3b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587629329023-c1ebeb2bc08f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1587629329023-c1ebeb2bc08f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1511174511562-5f7f18b874f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1511174511562-5f7f18b874f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
                 </div>
                  
                 <div class="gallery-content">
-                    <img class="gallery-img" src="https://images.unsplash.com/photo-1513682322455-ea8b2d81d418?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="">
+                    <img class="gallery-img" src="https://images.unsplash.com/photo-1513682322455-ea8b2d81d418?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="image">
                     <div class="gallery-text">
                         <p >Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
                     </div>
