--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="https://img.icons8.com/material-rounded/384/000000/menu.png"/>
             </div>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li class="dropdown-btn">
                         <a href="#">Services<img src="https://img.icons8.com/ios-glyphs/24/000000/chevron-down.png"/></a>
@@ -30,7 +30,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <ul class="nav-links-responsive">
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li class="dropdown-btn-mobile">
                         <a href="#">Services<img id="chevron" src="https://img.icons8.com/ios-glyphs/24/000000/chevron-down.png"/></a>
