--- a/products.html
+++ b/products.html
@@ -17,8 +17,8 @@
                 <img src="https://img.icons8.com/material-rounded/384/000000/menu.png"/>
             </div>
                 <ul class="nav-links">
-                    <li><a href="main.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li class="dropdown-btn">
                         <a href="#">Services<img src="https://img.icons8.com/ios-glyphs/24/000000/chevron-down.png"/></a>
                         <ul class="dropdown-list">
@@ -27,12 +27,12 @@
                         </ul>
                     </li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="nav-links-responsive">
-                    <li><a href="main.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li class="dropdown-btn-mobile">
                         <a href="#">Services<img id="chevron" src="https://img.icons8.com/ios-glyphs/24/000000/chevron-down.png"/></a>
                         <ul class="dropdown-list-mobile">
@@ -41,8 +41,8 @@
                         </ul>
                     </li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
         </div>
     </header>
