--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="#">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="nav-links-responsive">
                     <li><a href="index.html">Home</a></li>
